[package]
name = "multi-leech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
manic = { git = 'https://github.com/sumoduduk/manic.git', rev = 'f534cf8688bbb6871086dd4b0d3b0631a1298525', features = ["progress"] }
directories = "5.0.1"

[dependencies.tokio]
version = "1.35.1"
features = ["fs", "rt-multi-thread", "macros"]


[profile.release]
strip = true
opt-level = 2
lto  = true
codegen-units = 1
